# CodeWing-network

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  codewing-raw.json  codewing.json  docker-compose.yml  plain.json  raw-temp.txt  readme.md
codewing-store/chunks/: CW9ea83b3d42afcae57d6e48e94358cee1f4f130093e7a7fc8e0ccbab3ad671100  CWd4eead97c0194d547276ebc8d57cfe6dcc1a606133a5d4b73f011b0b7fa11b3d  CWd7ed075474f1762d424bdf1ee2b0198f8a4b01943d0175e6005542084afda192  CWe4ef1cefb1b07fde6bfdb8bcd7cbb005333011d29f5c035e822f4acd012ab555  CWeaf17d23f872d02bbefec4ce34542ebaff40ba96f3694df825f9aaa2b261c087
codewing-store/manifests/: CW506e06bdc007a5b70533e8559f889f455bd4e56ac749aa7d080fd3ac1709a590.json  CW98efb39238b90953bc9ca81d34bbbcd424aec009d252722c1a13437e3c389839.json  CWb4fc6d13c47e11e571607bc0e72f865818fba18bb5b38fc19d7ec1f747c37c97.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ui.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: Blocks.tsx  Dashboard.tsx  Economy.tsx  Network.tsx  Nodes.tsx  Storage.tsx  Transactions.tsx  Wallet.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs
pallets/data-storage/: Cargo.toml
pallets/data-storage/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: cli.rs  main.rs
src/api/: mod.rs  routes.rs  storage_routes.rs
src/blockchain/: block.rs  chain.rs  economy.rs  mempool.rs  mod.rs  transaction.rs
src/crypto/: merkle.rs  mod.rs  wallet.rs
src/network/: mod.rs  p2p.rs
src/storage/: chunker.rs  distributor.rs  mod.rs  node.rs  proof.rs  registry.rs  store.rs
