# C:\Users\vikas\Desktop\CodeWing-network\Cargo.toml
[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/data-storage",
    "runtime",
]
resolver = "2"

[workspace.dependencies]

# === SCALE ===
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false, features = ["alloc"] }

# === FRAME 41.x ===
frame-support = { version = "41.0.0", default-features = false }
frame-system = { version = "41.0.0", default-features = false }
frame-executive = { version = "41.0.0", default-features = false }
frame-benchmarking = { version = "41.0.0", default-features = false }
frame-system-benchmarking = { version = "41.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "41.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.9.0", default-features = false }
frame-try-runtime = { version = "0.47.0", default-features = false }

# === SP 42.x ===
sp-api = { version = "42.0.0", default-features = false }
sp-core = { version = "42.0.0", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-io = { version = "42.0.0", default-features = false }
sp-inherents = { version = "42.0.0", default-features = false }
sp-keyring = { version = "42.0.0", default-features = false }
sp-offchain = { version = "42.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-storage = { version = "42.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
sp-block-builder = { version = "42.0.0", default-features = false }
sp-transaction-pool = { version = "42.0.0", default-features = false }
sp-timestamp = { version = "42.0.0", default-features = false }
sp-blockchain = { version = "42.0.0", default-features = false }
sp-consensus-aura = { version = "42.0.0", default-features = false }
sp-consensus-grandpa = { version = "42.0.0", default-features = false }
sp-genesis-builder = { version = "0.18.0", default-features = false }

# === Pallets (FRAME 41.x)
pallet-aura = { version = "41.0.0", default-features = false }
pallet-balances = { version = "41.0.0", default-features = false }
pallet-grandpa = { version = "41.0.0", default-features = false }
pallet-sudo = { version = "41.0.0", default-features = false }
pallet-timestamp = { version = "41.0.0", default-features = false }
pallet-transaction-payment = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }

# === Node (SC) – Version 43.x (CONFIRMED FROM CRATES.IO) ===
sc-cli = { version = "43.0.0", default-features = false }
sc-service = { version = "43.0.0", default-features = false }
sc-executor = { version = "43.0.0", default-features = false }
sc-network = { version = "43.0.0", default-features = false }
sc-basic-authorship = { version = "43.0.0", default-features = false }
sc-client-api = { version = "43.0.0", default-features = false }
sc-offchain = { version = "43.0.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "43.0.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sc-consensus = { version = "43.0.0", default-features = false }
sc-consensus-aura = { version = "43.0.0", default-features = false }
sc-consensus-grandpa = { version = "43.0.0", default-features = false }

# === RPC ===
substrate-frame-rpc-system = { version = "45.0.0", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false }

# === Build Tools ===
substrate-build-script-utils = { version = "12.0.0", default-features = false }
substrate-wasm-builder = { version = "27.0.0", default-features = false }

# === Utilities ===
futures = { version = "0.3.31" }
clap = { version = "4.5.13", default-features = false }

# === Local Crates ===
solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-data-storage = { path = "./pallets/data-storage", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true