[package]
name = "CodeWing-Network"
version = "0.1.0"
edition = "2024"
authors = ["CodeWing Network"]
description = "A blockchain-based distributed cloud storage network"

[[bin]]
name = "codewing-node"
path = "src/main.rs"

[[bin]]
name = "codewing-cli"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sled = "0.34"
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
bytes = "1"

# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "identify",
    "ping",
    "kad",
    "macros"
]}
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true