#C:\Users\vikas\Desktop\CodeWing-network\node\Cargo.toml
[package]
name = "solochain-template-node"
description = "A solochain node running the CodeWing Network runtime."
version = "0.1.0"
edition = "2021"
publish = false
license = "Unlicense"

build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }

# --- SC (Node) dependencies (must match Polkadot SDK 45.x) ---
sc-cli = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-offchain = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true, default-features = false }
sc-basic-authorship = { workspace = true, default-features = false }
sc-telemetry = { workspace = true, default-features = false }

sc-consensus-aura = { workspace = true, default-features = false }
sc-consensus-grandpa = { workspace = true, default-features = false }

# --- SP (Runtime interfaces) ---
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }

# RPC
substrate-frame-rpc-system = { workspace = true, default-features = false }
pallet-transaction-payment-rpc = { workspace = true, default-features = false }

# JSON RPC
jsonrpsee = { workspace = true, features = ["server"] }

# Import runtime
solochain-template-runtime = { workspace = true, default-features = false }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = false }

[features]
default = ["std"]

std = [
    "sc-cli/std",
    "sc-service/std",
    "sc-executor/std",
    "sc-network/std",
    "sc-offchain/std",
    "sc-client-api/std",
    "sc-transaction-pool/std",
    "sc-basic-authorship/std",
    "sc-telemetry/std",
    "sc-consensus-aura/std",
    "sc-consensus-grandpa/std",

    "sp-io/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-blockchain/std",
    "sp-inherents/std",
    "sp-keyring/std",
    "sp-timestamp/std",
    "sp-genesis-builder/std",

    "substrate-frame-rpc-system/std",
    "pallet-transaction-payment-rpc/std",
    "jsonrpsee/std",

    "solochain-template-runtime/std",
]

runtime-benchmarks = [
    "solochain-template-runtime/runtime-benchmarks",
]

try-runtime = [
    "solochain-template-runtime/try-runtime",
]
