#C:\Users\vikas\Desktop\CodeWing-network\pallets\data-storage\Cargo.toml
[package]
name = "pallet-data-storage"
version = "0.1.0"
edition = "2021"
authors = ["CodeWing"]
description = "pallet-data-storage: store small blobs on-chain"
license = "Unlicense"
publish = false

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

# optional benchmarking
frame-benchmarking = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
default = ["std"]

std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "frame-benchmarking/std",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
]
